Added Role repository, admin user index reachable

--- a/public/assets/css/less/master.less
+++ b/public/assets/css/less/master.less
@@ -155,12 +155,24 @@
     }
 }
 
-/*!
+/**
  * Semantics based on Twitter Bootstrap
  *
  */
 
 .btn-cancel {
-	.btn;
-	.btn-warning;
+    .btn;
+    .btn-warning;
+}
+
+.btn-back {
+    .btn;
+    .btn-small;
+    .btn-inverse;
+}
+
+.btn-create {
+    .btn;
+    .btn-small;
+    .btn-info;
 }
